# web_m6_ORM

./: LICENSE  README.md  create_db.py  execute_query.py  fill_data.py  pyproject.toml  query_1.sql  school.db  school.sql  school.sqlite
database/: school.db
db_manipulations/: create_db.py  execute_query.py  fill_data.py  school.sql
queries/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
